fixed navbar hiding on small screens

--- a/Mastery_Helper/wwwroot/css/site.css
+++ b/Mastery_Helper/wwwroot/css/site.css
@@ -153,7 +153,8 @@ app {
 
 @media (max-width: 767.98px) {
     .main .top-row:not(.auth) {
-        display: none;
+        position: sticky;
+        top: 0;
     }
 
     .main .top-row.auth {
